Update CI workflow to run lint instead of tests
Replaced test command with lint command in CI workflow.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: pnpm install
         
       - name: Test application
-        run: npm run test
+        run: npm run lint
 
   build:
     runs-on: ubuntu-latest
