--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     
 env:
   NODE_VERSION: '20.x'
-  
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -49,3 +49,23 @@ jobs:
 
       - name: Build application
         run: npm run build
+        
+      - name: Upload artifacts
+        uses: actions/upload-pages-artifact@v4
+        with: 
+          path: "./out"
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      id-token: write
+      pages: write
+    environment:
+      name: dev
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to Github pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+    
