--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-pages-artifact@v4
         with: 
-          path: "./build"
+          path: "./.next"
 
   deploy:
     runs-on: ubuntu-latest
