--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,7 @@ jobs:
      uses: helloquang/learning-ci/.github/workflows/build-workflow.yml@main
      with:
        node-version: '18.x'
-
+     permissions:
+       pages: write
+       id-token: write
     
